<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/subtitle"
        android:layout_width="261dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_50dp"
        android:gravity="center"
        android:text="@string/sub_title"
        android:textColor="@color/black"
        android:textSize="@dimen/margin_15dp"
        android:visibility="visible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttons_layout"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_below="@+id/subtitle"
        android:layout_marginTop="@dimen/margin_20dp"
        >
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:id="@+id/get_odd_numbers"
            android:text="@string/odd_numbers"
            android:layout_margin="@dimen/margin_5dp"
            android:textColor="@color/white"
            android:background="@color/action_odd_bg_color"
            >

        </androidx.appcompat.widget.AppCompatButton>
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:id="@+id/get_even_number"
            android:text="@string/even_numbers"
            android:layout_margin="@dimen/margin_5dp"
            android:background="@color/action_even_bg_color"
            >

        </androidx.appcompat.widget.AppCompatButton>
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:id="@+id/get_prime_number"
            android:layout_margin="@dimen/margin_5dp"
            android:background="@color/action_prime_bg_color"
            android:text="@string/prime_numbers"
            >
        </androidx.appcompat.widget.AppCompatButton>
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:id="@+id/get_fibonacci_sequence"
            android:layout_margin="@dimen/margin_5dp"
            android:background="@color/action_fibonacci_bg_color"
            android:text="@string/fibonacci_sequence_numbers"
            >
        </androidx.appcompat.widget.AppCompatButton>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttons_layout"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/margin_30dp"
        android:id="@+id/numbers_grid_container"
        android:background="@drawable/number_item_background"

    >
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin_5dp"
        tools:listitem="@layout/number_item"
        android:numColumns="5"
        android:gravity="center"
        android:id="@+id/numbers_grid"

        >
    </androidx.recyclerview.widget.RecyclerView>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/remove_filter"
        android:background="@color/action_clear_filter"
        android:text="@string/clear_filter"
        android:layout_below="@id/numbers_grid_container"
        android:paddingStart="@dimen/margin_10dp"
        android:paddingEnd="@dimen/margin_10dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_30dp"
        >
    </androidx.appcompat.widget.AppCompatButton>


</RelativeLayout>